# attic-libchoicebox

./: .gitignore  Makefile.am  configure.ac  echoicebox.pc.in  libchoicebox.pc.in
data/: Makefile.am  choicebox.ini
debian/: changelog  control  echoicebox-data.install  libchoicebox1.install  libechoicebox0.install  rules  v3.ini
po/: Makefile.am  POTFILES  be.po  bg.po  bn_IN.po  ca.po  cs.po  de.po  echoicebox.pot  fr.po  hu.po  libchoicebox.pot  lv.po  messages.pot  pl.po  ru.po  uk.po
src/: Makefile.am  echoicebox.c  echoicebox.h  echoicebox_aux.c  libchoicebox-aux.c  libchoicebox.c  libchoicebox.h  teste.c
themes/: Makefile.am  background-azbooka.edj  choicebox.edc  choicebox.edj  echoicebox.edc  echoicebox.edci  echoicebox.edj
